body overflow fix

--- a/sass/agigen.scss
+++ b/sass/agigen.scss
@@ -11,9 +11,7 @@
 }
 
 body {
-    font-family: "proxima-nova"
-}
-.main-content {
+    font-family: "proxima-nova";
     overflow-x: hidden;
 }
 
